# ocaml-xla

./: README.md  TODO.txt  config
examples/: dune  get_gpt2_weights.py  jacky.ml  nanogpt.ml
src/config/: discover.ml
src/stubs/: bindings.ml
src/wrapper/: dune  npy.ml  wrappers.ml  wrappers.mli  xla_stubs.cpp  xla_stubs.h
